--- a/TicketSystem/TicketSystem.csproj
+++ b/TicketSystem/TicketSystem.csproj
@@ -78,9 +78,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ITicket.cs" />
-    <Compile Include="ViewModels\Models\AdultTicketModel.cs" />
-    <Compile Include="ViewModels\Models\ChildTicketModel.cs" />
-    <Compile Include="ViewModels\Models\MemberTicketModel.cs" />
+    <Compile Include="Models\AdultTicketModel.cs" />
+    <Compile Include="Models\ChildTicketModel.cs" />
+    <Compile Include="Models\MemberTicketModel.cs" />
+    <Compile Include="Models\TourModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
