--- a/TicketSystem/TicketSystem.csproj
+++ b/TicketSystem/TicketSystem.csproj
@@ -77,6 +77,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Decorators\PieAddon.cs" />
+    <Compile Include="Decorators\PintAddon.cs" />
+    <Compile Include="Decorators\TicketFoodDecorator.cs" />
     <Compile Include="Decorators\FrontRowAddon.cs" />
     <Compile Include="Decorators\TourAddon.cs" />
     <Compile Include="Models\ChildTicketModel.cs" />
@@ -125,6 +128,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\qcode.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
